@@ -130,6 +130,7 @@ Release 0.19.0 - Unreleased
    HBASE-1107  NPE in HStoreScanner.updateReaders
    HBASE-1083  Will keep scheduling major compactions if last time one ran, we
                didn't.
+   HBASE-1101  NPE in HConnectionManager$TableServers.processBatchOfRows
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
